Left only backend with tornado

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,7 @@
-flask
-flask_wtf
-flask_sqlalchemy
-python-dotenv
-psycopg2-binary
 sqlalchemy
 pandas
 numpy
-overpy
-gunicorn
-bootstrap-flask
-flask-login
-bcrypt
-email-validator
 pydantic
 supervisor
-requests
+tornado
+bcrypt
